# yadex

./: Cargo.toml  README.md
.github/workflows/: rust.yml
contrib/: nginx.example.conf  nginx.index.example.conf  nginx.try_files.example.conf
etc/: config.toml  index.html
src/: config.rs  main.rs  server.rs
